add new study project

--- a/docs/笔记.md
+++ b/docs/笔记.md
@@ -1,3 +1,7 @@
-1 Java 对象的创建过程
+1、 Java 对象的创建过程
+
 类加载检查 -> 分配内存 -> 初始化零值 -> 对象头配置 -> 执行 init 方法
+
 （妈妈准备生孩子，看看是否做好了准备 -> 给孩子分配床位 -> 分配一个小名 -> 孩子基因序列 -> 生孩子）
+
+2、
