--- a/docs/笔记.md
+++ b/docs/笔记.md
@@ -3,3 +3,26 @@
 类加载检查 -> 分配内存 -> 初始化零值 -> 对象头配置 -> 执行 init 方法
 
 （妈妈准备生孩子，看看是否做好了准备 -> 给孩子分配床位 -> 分配一个小名 -> 孩子基因序列 -> 生孩子）
+
+2、双校验单例
+
+```java
+public class Singleton{
+  private volatile static Singleton uniqueInstance;
+  private Singleton(){
+
+  }
+  public static void Singleton getUniqueInstance(){
+    if(uniqueInstance == null){
+      synchronized(Singleton.class){
+        if(uniqueInstance == null){
+          uniqueInstance = new Singleton();
+        }
+      }
+    }
+    return uniqueInstance;
+  }
+}
+```
+
+3、[Docker 配置 MySQL 的主从复制](http://itboyhub.com/2021/01/28/docker-mysql/)
