--- a/docs/笔记.md
+++ b/docs/笔记.md
@@ -26,3 +26,5 @@ public class Singleton{
 ```
 
 3、[Docker 配置 MySQL 的主从复制](http://itboyhub.com/2021/01/28/docker-mysql/)
+
+4、[Spring IOC 容器源码分析](https://javadoop.com/post/spring-ioc)
