--- a/docs/笔记.md
+++ b/docs/笔记.md
@@ -28,3 +28,5 @@ public class Singleton{
 3、[Docker 配置 MySQL 的主从复制](http://itboyhub.com/2021/01/28/docker-mysql/)
 
 4、[Spring IOC 容器源码分析](https://javadoop.com/post/spring-ioc)
+
+5、[聊聊 MyBatis 缓存机制](https://tech.meituan.com/2018/01/19/mybatis-cache.html)
